rough functionality implemented

--- a/index.html
+++ b/index.html
@@ -8,7 +8,41 @@
     <script type='text/javascript' src='scripts.js'></script>
   </head>
   <body>
-    
+    <!-- CONSOLE type='number'-->
+    <div class="console-container">
+      <input id="console" value='' autocomplete='off'/>
+    </div>
 
+    <!-- NUMBER PAD -->
+    <ul id="num-pad">
+      <li class="btn num">1</li>
+      <li class="btn num">2</li>
+      <li class="btn num">3</li>
+
+      <li class="btn num">4</li>
+      <li class="btn num">5</li>
+      <li class="btn num">6</li>
+
+      <li class="btn num">7</li>
+      <li class="btn num">8</li>
+      <li class="btn num">9</li>
+
+      <li class="btn num">0</li>
+    </ul>
+
+    <ul id="operations">
+      <li class="btn op" id="add">+</li>
+      <li class="btn op" id="sub">-</li>
+      <li class="btn op" id="mul">*</li>
+      <li class="btn op" id="div">/</li>
+    </ul>
+
+    <ul id="misc">
+      <li class="btn" id="submit">=</li>
+    </ul>
+    <table id="outside">
+        <tr><td id="t1">one</td></tr>
+        <tr><td id="t2">two</td></tr>
+    </table>
   </body>
 </html>
